<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".QrResultsActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/tobActionBarContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/top_action_bar" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/survey_txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/qrgame_results"
                        android:textAppearance="@style/bizinfo_title" />

                    <TextView
                        android:id="@+id/lbl_qrgame_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/qrgame_locations"
                        android:textAppearance="@style/subtitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_bottom_edittext"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/qr_locations"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/qr_results" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/comment_instructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/qrgame_prize"
                        android:textAppearance="@style/subtitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_bottom_edittext"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/qr_prize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/qr_results" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_again"
                        style="@style/AppTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:visibility="invisible"
                        android:background="@drawable/btn_register_bg"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/qrgame_again" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
