<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollViewRegister" android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:fillViewport="true"
        xmlns:app="http://schemas.android.com/apk/res/com.testapp.test">
	
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="10dip"
	    android:background="@drawable/background"
	    android:focusable="true"
	    android:focusableInTouchMode="true" >
	    
	    <ImageView
		      android:id="@+id/imageView1"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_alignParentTop="true"
		      android:layout_centerHorizontal="true"
		      android:layout_marginBottom="30dp"
		      android:layout_marginTop="97dp"
		      android:src="@drawable/ic_qrivo" />
	
		 <EditText
		     android:id="@+id/username"
		     android:layout_width="220dp"
		     android:layout_height="wrap_content"
		     android:layout_below="@+id/imageView1"
		     android:layout_centerInParent="true"
		     android:layout_marginBottom="10dp"
		     android:layout_marginLeft="15dp"
		     android:layout_marginRight="15dp"
		     android:layout_marginTop="24dp"
		     android:background="@drawable/custom_edittext"
		     android:hint="@string/label_login_username"
		     android:inputType="text"
		     android:paddingBottom="8dp"
		     android:paddingLeft="10dp"
		     android:paddingTop="9dp"
		     android:textColor="#555252"
		     android:textSize="14dip" />
		 
		  <EditText
		      android:id="@+id/password"
		      android:layout_width="220dp"
		      android:layout_height="wrap_content"
		      android:layout_below="@+id/username"
		      android:layout_centerInParent="true"
		      android:layout_marginBottom="10dp"
		      android:layout_marginLeft="15dp"
		      android:layout_marginRight="15dp"
		      android:layout_marginTop="0dp"
		      android:background="@drawable/custom_edittext"
		      android:hint="@string/label_login_password"
		      android:inputType="textPassword"
		      android:paddingBottom="8dp"
		      android:paddingLeft="10dp"
		      android:paddingTop="9dp"
		      android:textColor="#555252"
		      android:textSize="14dip" />
		  
		  <EditText
		      android:id="@+id/email"
		      android:layout_width="220dp"
		      android:layout_height="wrap_content"
		      android:layout_below="@+id/password"
		      android:layout_centerInParent="true"
		      android:layout_marginBottom="0dp"
		      android:layout_marginLeft="15dp"
		      android:layout_marginRight="15dp"
		      android:layout_marginTop="0dp"
		      android:background="@drawable/custom_edittext"
		      android:hint="@string/label_login_email"
		      android:inputType="textEmailAddress"
		      android:paddingBottom="8dp"
		      android:paddingLeft="10dp"
		      android:paddingTop="9dp"
		      android:textColor="#555252"
		      android:textSize="14dip" />

		   <Button
		       android:id="@+id/btn_register"
		       android:layout_width="130dp"
		       android:layout_height="wrap_content"
		       android:layout_alignLeft="@+id/email"
		       android:layout_alignRight="@+id/email"
		       android:layout_below="@+id/email"
		       android:layout_marginTop="14dp"
		       android:background="@drawable/btn_menu_main"
		       android:paddingBottom="8dp"
		       android:paddingTop="8dp"
		       android:text="Resgístrate"
		       android:textColor="#555252" />
	
	</RelativeLayout>
	
</ScrollView>