<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".QrGameActivity" >
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="0dp" >
        
        <include
            android:id="@+id/tobActionBarContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/top_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/qrgame_bizinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_register_bg"
            android:text="@string/qrgame_bizne"
            android:textAppearance="@style/subtitle" />

        <TextView
            android:id="@+id/survey_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/qrgame_title"
            android:textAppearance="@style/bizinfo_title" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.85"
            android:background="@drawable/rounded_bottom_edittext"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_qrgame_ques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textAppearance="@style/subtitle" />

            <ScrollView
                android:id="@+id/biz_scroll"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:clickable="true" >
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/qrgame_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="19dp"
            android:background="@drawable/btn_register_bg"
            android:gravity="center"
            android:text="@string/qrgame_btn_next" />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>